# aaa-combat-simulator

./: AAACombatSimulator.pro  CMakeLists.txt  TODO  combatthread.cpp  combatthread.h  combatwidget.cpp  combatwidget.h  controlwidget.cpp  controlwidget.h  factionwidget.cpp  factionwidget.h  focusspinbox.cpp  focusspinbox.h  main.cpp  qmake.bat  settingswidget.cpp  settingswidget.h  simulatorapplication.cpp  simulatorapplication.h  unit.cpp  unit.h  unitwidget.cpp  unitwidget.h
